# super-duper-hashmap

server/: Cargo.toml
server/migrations/: 20230402154051_init.up.sql
server/src/: lib.rs  main.rs
server/src/routes/auth/: errors.rs  mod.rs  password.rs  session.rs
tauri-app/: pnpm-lock.yaml
tauri-app/src/: App.svelte
