[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.70"
argon2 = "0.5.0"
axum = { version = "0.6.12", features = ["macros"] }
axum-extra = { version = "0.7.2", features = ["cookie"] }
dotenv = "0.15.0"
rand = "0.8.5"
serde = { version = "1.0.159", features = ["derive"] }
serde_json = "1.0.95"
sqlx = { version = "0.6.3", features = ["postgres", "runtime-tokio-rustls", "uuid", "offline"] }
thiserror = "1.0.40"
tokio = { version = "1.27.0", features = ["full"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
tracing-test = "0.2.4"
uuid = { version = "1.3.0", features = ["v4"] }
zxcvbn = "2.2.2"
